# free_drinks

./: .gitignore  README.md  pyproject.toml
free_drinks/: app.py  config.txt  main.py
tests/: tests.py
