[tool.poetry]
name = "free-drinks"
version = "0.1.0"
description = ""
authors = ["zx <eemektas@gmail.com>"]
readme = "README.md"
packages = [{include = "free_drinks"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
