[tool.poetry]
name = "free-drinks"
version = "0.1.0"
description = "Free drinks promotion estimator for vending machines"
authors = ["zx <eemektas@gmail.com>"]
readme = "README.md"
packages = [{include = "free_drinks"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
freezegun = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
